Feat : Add grouped distributions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="http://dimplejs.org/dist/dimple.v2.0.0.min.js"></script>
   <script src="javascript.js"></script>
  
-    </head>
+</head>
 
     <body>
       <header>
@@ -21,7 +21,7 @@
 
 
       <div>
-        <div id = "intro_text" class = "description">
+        <div class = "description">
           <h2>Introduction</h2>
           <p>In this project, I am analyzing and visualizing the demographics and passenger information from 891 of the 2224 passengers and crew on board the Titanic. </p>
         </div>
@@ -32,8 +32,25 @@
           </script>
         </div>
         <div class = "description">
-          <p> As the graphs depicts that there were male passengers than female passengers on the board</p>
+          <p> As the charts depicts that there were male passengers than female passengers on the board</p>
         </div>
+      </div>
+
+
+
+      <div>
+        <div class = "description">
+          <h2>Grouped distribtion</h2>
+          <p> </p>
+        </div>
+
+        <div id="grouped_distribution" class = "svg_Container">
+         
+        </div>
+        <div class = "description">
+          <p> The charts shows the distribution of died and survived passengers in diffenet categories</p>
+        </div>
+
       </div>
 
     </body>
