Fix : sync the header and footer color

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           d3.csv("titanic-data-converted.csv", draw_distributions);
           </script>
         <div>
-          <h1>Visualizing data with dimple.js</h1>
+          <h1>Visualizing data using dimple.js</h1>
         </div> 
       </header>
       <div>
@@ -38,7 +38,7 @@
       <div>
         <div class = "text">
           <h2>Selected Variables Distribution Grouped by Survival Status</h2>
-          <p> </p>
+         <br/>
         </div>
         <div id="grouped_distribution">
          
@@ -61,7 +61,7 @@
        <div>
         <div class = "text">
           <h2>Summary</h2>
-          <p> </p>
+         <br/>
         </div>      
         <div class = "text">
           <p> We may say that people with higher socioeconomic status had a better chance for survival since 37 percent of upper class passenger could not survive while 76 percent of lower class passengers died. In addition, we have showed in our sample that being with family affected passengers survival chance since 70% of passengers who were traveling alone could not survive while the same factor for people who were traveling with their family is around 51 percent. Also, the study shows that women and children had better chance of survival in the accident.</p>
