Feat : Add first feadback section to the report

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <body>
       <header>
          <script type="text/javascript">
+         "use strict";
           d3.csv("titanic-data-converted.csv", draw_distributions);
           </script>
         <div>
